Fix scrollbar

--- a/frontend/ui/components/Space/NearProtocol/Network/Transactions/List/List.module.scss
+++ b/frontend/ui/components/Space/NearProtocol/Network/Transactions/List/List.module.scss
@@ -74,6 +74,7 @@
 
 .scrollBar {
   @include scrollbar;
+  overflow-x: hidden;
 }
 
 .wrapper {
