--- a/frontend/ui/styles/mixins.scss
+++ b/frontend/ui/styles/mixins.scss
@@ -90,10 +90,8 @@
   @include base-typography($font-size-xs, $line-height-xs, 700);
 }
 
-
 @mixin scrollbar {
   padding-right: 2px;
-  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 4px;
   }
